fix background position so background doesn't flicker on page load

--- a/ultros/static/main.css
+++ b/ultros/static/main.css
@@ -39,7 +39,6 @@ body {
   opacity: 1;
   margin: 0px;
   background-color: #000;
-  background-position: 0px;
   max-width: 100vw;
   min-height: 100vh;
 }
